Segunda pre-entrega.
Se agregó un mock.js con productos.
Se agregó navegación entre componentes usando la ID basada en la category correspondiente.

--- a/src/Components/ItemListContainer/Itemlistcontainer.scss
+++ b/src/Components/ItemListContainer/Itemlistcontainer.scss
@@ -1,4 +1,12 @@
-.list{
-    background-color: aqua;
-    margin-left: 30px;
+.itemlistcontainer{
+    display: flex;
+    margin-top: 16px;
+    margin-left: 16px;
+    margin-right: 16px;
 }
+
+.itemlistcontainer__producto{
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
