--- a/src/Components/NavBar/Navbar.scss
+++ b/src/Components/NavBar/Navbar.scss
@@ -17,3 +17,12 @@
     height: 32px;
     min-width: 38px;
 }
+
+.navbar__category{
+    margin-bottom: 10px;
+    margin-left: 16px;
+    margin-right: 16px;
+    display: flex;
+    align-items: center;
+    color: black;
+}
